# framework-system-ffi-extensions

./: .gitignore  .gitmodules  Cargo.toml  FFI_NOTES.md  FRAMEWORK_DOTNET_CHANGES_TO_BE_MADE.md  LICENSE.txt  NATIVEMETHODS_TYPES.md  README.md  RUST_FILE_OVERVIEW.md  build.rs  rust-toolchain.toml
.github/: dependabot.yml
.github/instructions/: ffi-generated-surface.instructions.md
.github/prompts/: ffi-generated-shape-review.prompt.md  ffi-parity-table.prompt.md
.github/skills/framework-dotnet-ffi-abi/: SKILL.md
.github/skills/framework-dotnet-ffi-standalone-repo/: SKILL.md
.github/workflows/: ci.yml  release.yml
src/: abi_impls.rs  byte_buffer.rs  controls.rs  gpu_descriptor.rs  inventory.rs  lib.rs  pd.rs  results.rs  runtime.rs  status.rs  thermal.rs
src/inventory/: builder.rs  capabilities.rs  conversions.rs  defaults.rs  detect.rs  internals.rs  query.rs  usb_slots.rs
