[package]
name = "framework_lib_ffi"
version = "0.6.0"
description = "Standalone native FFI surface for Framework System .NET interop"
license = "MIT License"
edition = "2021"
rust-version = "1.81"
build = "build.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
csbindgen = "1.9.7"

[dependencies]
framework_lib = { path = "framework-system/framework_lib" }
hidapi = { version = "2.6.3", features = ["windows-native"] }
rusb = "0.9.4"

[workspace]
